Maybe fix vertical scrolling on Firefox. Fixes #87.

--- a/client/src/styles/AddressPage.scss
+++ b/client/src/styles/AddressPage.scss
@@ -12,7 +12,7 @@
 
   display: flex;
   flex-direction: column;
-  overflow: hidden;
+  max-width: 100%;
 
   .AddressPage__info {
     width: 100%;
@@ -48,6 +48,7 @@
     flex: 1;
     // flex-grow: 1;
     // height: 100%;
+    overflow: hidden;
 
     border-top: 1px solid $gray-dark;
 
